--- a/Areas/Admin/Views/DotXetTuyens/Index.cshtml
+++ b/Areas/Admin/Views/DotXetTuyens/Index.cshtml
@@ -4,71 +4,96 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
-
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
         <div class="page-header-content">
             <div class="row align-items-center justify-content-between pt-3">
                 <div class="col-auto mb-1">
-                    <h1 class="page-header-title mb-2">
+                    <div class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        Đợt xét tuyển
-                    </h1>
-                </div>
-                <div class="col-12 col-xl-auto mb-3">
-                    <a class="btn btn-sm btn-light text-primary" href="@Url.Action("Create","DotXetTuyens")">
-                        <i class="me-1" data-feather="user-plus"></i>
-                        Thêm mới
-                    </a>
+                        <span>Quản lý thông tin đợt xét tuyển</span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </header>
-<div class="container-fluid px-4">
-    <div class="card">
-        <div class="card-body">
-            <table class="table">
-                <tr>
-                    <th>
-                        Năm học
-                    </th>
-                    <th>
-                        Tên đợt
-                    </th>
-                    <th>
-                        Trạng thái
-                    </th>
-                    <th>
-                       Ghi chú
-                    </th>
-                    <th></th>
-                </tr>
 
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NamHoc.NamHoc_Ten)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Dxt_Ten)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Dxt_TrangThai)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Dxt_GhiChu)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Dxt_ID }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Dxt_ID }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Dxt_ID })
-                        </td>
-                    </tr>
-                }
+<div class="container-fluid px-12">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card card-header-actions mt-1 mb-1 ">
+                <div class="card-header">
+                    <span>Danh sách đợt xét tuyển</span>
+                    <a class="btn btn-outline-primary btn-sm align-items-center" href="@Url.Action("Create", "DotXetTuyens")"> + Thêm mới</a>
+                </div>
+                <div class="card-body">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th>@Html.DisplayName("Tên năm") </th>
+                                <th>@Html.DisplayName("Tên đợt") </th>
+                                <th>@Html.DisplayName("Trạng thái")</th>
+                                <th>@Html.DisplayName("Ghi chú")</th>
+                                <th style="width:100px; text-align:center">@Html.DisplayName("Cập nhật")</th>                                
+                            </tr>
+                        </thead>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.NamHoc.NamHoc_Ten)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Dxt_Ten)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Dxt_TrangThai)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Dxt_GhiChu)
+                                </td>
+                                <td style="width:100px; text-align:center">
+                                    @Html.ActionLink("Sửa", "Edit", new { id = item.Dxt_ID }) |                                 
+                                    @Html.ActionLink("Xóa", "Delete", new { id = item.Dxt_ID })
+                                </td>
+                            </tr>                            
+                        }
+                    </table>
+                </div>
+            </div>
+        </div>
 
-            </table>
+    </div>
+
+</div>
+<div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">Toast Title</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="modal_tb_xoa" tabindex="-1" role="dialog" aria-labelledby="modal_tb_xoa" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal_tb_xoa">Thông báo</h5>
+                <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <span>Bạn chắc chắn nguyện vọng này dữ liệu này?</span>
+                <input id="key_delete_dkxt_id" type="hidden" />
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Hủy</button>
+                <button class="btn btn-primary" type="button">Đồng ý</button>
+            </div>
+        </div>
+    </div>
+</div>
+
