--- a/Areas/Admin/Views/KhuVucs/Index.cshtml
+++ b/Areas/Admin/Views/KhuVucs/Index.cshtml
@@ -5,42 +5,93 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
 
-<h2>Index</h2>
+<header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
+    <div class="container-fluid px-4">
+        <div class="page-header-content">
+            <div class="row align-items-center justify-content-between pt-3">
+                <div class="col-auto mb-1">
+                    <div class="page-header-title  mb-2">
+                        <div class="page-header-icon"><i data-feather="list"></i></div>
+                        <span>Quản lý thông tin khu vực</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.KhuVuc_Ten)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.KhuVuc_DiemUuTien)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.KhuVuc_GhiChu)
-        </th>
-        <th></th>
-    </tr>
+<div class="container-fluid px-12">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card card-header-actions mt-1 mb-1 ">
+                <div class="card-header">
+                    <span>Danh sách khu vực</span>
+                    <a class="btn btn-outline-primary btn-sm align-items-center" href="@Url.Action("Create", "KhuVucs")"> + Thêm mới</a>
+                </div>
+                <div class="card-body">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th>@Html.DisplayName("Tên Khu vực") </th>
+                                <th>@Html.DisplayName("Điểm ưu tiên") </th>
+                                <th>@Html.DisplayName("Ghi chú")</th>
+                                <th style="width:100px; text-align:center">@Html.DisplayName("Cập nhật")</th>
+                            </tr>
+                        </thead>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.KhuVuc_Ten)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.KhuVuc_DiemUuTien)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.KhuVuc_GhiChu)
+                                </td>
+                                <td style="width:100px; text-align:center">
+                                    @Html.ActionLink("Sửa", "Edit", new { id = item.KhuVuc_ID }) |
+                                    @Html.ActionLink("Xóa", "Delete", new { id = item.KhuVuc_ID })
+                                </td>
+                            </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.KhuVuc_Ten)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.KhuVuc_DiemUuTien)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.KhuVuc_GhiChu)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.KhuVuc_ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.KhuVuc_ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.KhuVuc_ID })
-        </td>
-    </tr>
-}
+                        }
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">Toast Title</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+        </div>
+    </div>
+</div>
 
-</table>
+<div class="modal fade" id="modal_tb_xoa" tabindex="-1" role="dialog" aria-labelledby="modal_tb_xoa" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal_tb_xoa">Thông báo</h5>
+                <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <span>Bạn chắc chắn nguyện vọng này dữ liệu này?</span>
+                <input id="key_delete_dkxt_id" type="hidden" />
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Hủy</button>
+                <button class="btn btn-primary" type="button">Đồng ý</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
