--- a/Areas/Admin/Views/NamHocDotxets/Index.cshtml
+++ b/Areas/Admin/Views/NamHocDotxets/Index.cshtml
@@ -1,10 +1,8 @@
-﻿@model IEnumerable<HDU_AppXetTuyen.Models.DoiTuong>
-
+﻿
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
-
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
         <div class="page-header-content">
@@ -12,7 +10,7 @@
                 <div class="col-auto mb-1">
                     <div class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        <span>Quản lý thông tin Đối tượng</span>
+                        <span>Quản lý thông tin năm xét tuyển</span>
                     </div>
                 </div>
             </div>
@@ -25,42 +23,17 @@
         <div class="col-md-12">
             <div class="card card-header-actions mt-1 mb-1 ">
                 <div class="card-header">
-                    <span>Danh sách đối tượng</span>
-                    <a class="btn btn-outline-primary btn-sm align-items-center" href="@Url.Action("Create", "DoiTuongs")"> + Thêm mới</a>
+                    <span>Danh sách năm</span>
+                    <a class="btn btn-outline-primary btn-sm align-items-center"> + Thêm mới</a>
                 </div>
                 <div class="card-body">
-                    <table class="table table-striped table-hover">
-                        <thead>
-                            <tr>
-                                <th>@Html.DisplayName("Tên đối tượng") </th>
-                                <th>@Html.DisplayName("Điểm ưu tiên") </th>
-                                <th>@Html.DisplayName("Ghi chú")</th>
-                                <th style="width:100px; text-align:center">@Html.DisplayName("Cập nhật")</th>
-                            </tr>
-                        </thead>
-                        @foreach (var item in Model)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DoiTuong_Ten)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DoiTuong_DiemUuTien)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DoiTuong_GhiChu)
-                                </td>
-                                <td style="width:100px; text-align:center">
-                                    @Html.ActionLink("Sửa", "Edit", new { id = item.DoiTuong_ID }) |
-                                    @Html.ActionLink("Xoá", "Delete", new { id = item.DoiTuong_ID })
-                                </td>
-                            </tr>
-                        }
-                    </table>
+                  
                 </div>
             </div>
         </div>
+       
     </div>
+
 </div>
 <div class="toast-container position-fixed bottom-0 end-0 p-3">
     <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
@@ -91,4 +64,3 @@
         </div>
     </div>
 </div>
-
