--- a/Areas/Admin/Views/Nganhs/Create.cshtml
+++ b/Areas/Admin/Views/Nganhs/Create.cshtml
@@ -4,69 +4,164 @@
     ViewBag.Title = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
-
-<h2>Create</h2>
-
-
-@using (Html.BeginForm()) 
+<header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
+    <div class="container-fluid px-4">
+        <div class="page-header-content">
+            <div class="row align-items-center justify-content-between pt-3">
+                <div class="col-auto mb-1">
+                    <div class="page-header-title  mb-2">
+                        <div class="page-header-icon"><i data-feather="list"></i></div>
+                        <span>Quản lý thông tin Ngành</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+@using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Nganh</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nganh_MaNganh, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nganh_MaNganh, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nganh_MaNganh, "", new { @class = "text-danger" })
+    <div class="container-fluid px-12">
+        <div class="card card-header-actions">
+            <div class="card-header">
+                <span>Thêm mới ngành</span>
+                <a class="btn-close" aria-label="Close" href="@Url.Action("Index","Nganhs")"></a>
             </div>
-        </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-xl-6">
+                        <div class="card card-header-actions mt-1 mb-1 ">
+                            <div class="card-header">Thông tin ngành mới</div>
+                            <div class="card-body">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.NganhTenNganh, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NganhTenNganh, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NganhTenNganh, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                @Html.AntiForgeryToken()
+                                <div class="form-horizontal">
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                    <div class="row g-2 mb-3">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                @Html.Label("Chọn khối ngành", htmlAttributes: new { @class = "control-label col-md-12" })
+                                                <div class="col-md-12">
+                                                    @Html.DropDownList("KhoiNganh_ID", null, htmlAttributes: new { @class = "form-select" })
+                                                    @Html.ValidationMessageFor(model => model.KhoiNganh_ID, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                @Html.Label("Chọn Khoa", htmlAttributes: new { @class = "control-label col-md-12" })
+                                                <div class="col-md-12">
+                                                    @Html.DropDownList("Khoa_ID", null, htmlAttributes: new { @class = "form-select" })
+                                                    @Html.ValidationMessageFor(model => model.Khoa_ID, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Khoa_ID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Khoa_ID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Khoa_ID, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                    <div class="row g-2 mb-3">
+                                        <div class="col-md-6">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nganh_GhiChu, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nganh_GhiChu, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nganh_GhiChu, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                            <div class="form-group">
+                                                @Html.Label("Mã ngành", htmlAttributes: new { @class = "control-label col-md-12" })
+                                                <div class="col-md-12">
+                                                    @Html.EditorFor(model => model.Nganh_MaNganh, new { htmlAttributes = new { @class = "form-control" } })
+                                                    @Html.ValidationMessageFor(model => model.Nganh_MaNganh, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.KhoiNganh_ID, "KhoiNganh_ID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("KhoiNganh_ID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.KhoiNganh_ID, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                            <div class="form-group">
+                                                @Html.Label("Tên ngành", htmlAttributes: new { @class = "control-label col-md-12" })
+                                                <div class="col-md-12">
+                                                    @Html.EditorFor(model => model.NganhTenNganh, new { htmlAttributes = new { @class = "form-control" } })
+                                                    @Html.ValidationMessageFor(model => model.NganhTenNganh, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row g-2 mb-1">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                @Html.Label("Ghi chú", htmlAttributes: new { @class = "control-label col-md-12" })
+                                                <div class="col-md-12">
+                                                    @Html.EditorFor(model => model.Nganh_GhiChu, new { htmlAttributes = new { @class = "form-control" } })
+                                                    @Html.ValidationMessageFor(model => model.Nganh_GhiChu, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6">
+                        <div class="card card-header-actions mt-1 mb-1 ">
+                            <div class="card-header">Tổ hợp môn xét tuyển của ngành</div>
+                            <div class="card-body">
+                                <table class="table table-striped table-hover">
+                                    <tr>
+                                        <td>A01</td>
+                                        <td>Toán Lý T.Anh</td>
+                                        <td style="width:80px">
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>A02</td>
+                                        <td>Toán Lý Sinh</td>
+                                        <td>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>B03</td>
+                                        <td>Toán Sinh Văn</td>
+                                        <td>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>C00</td>
+                                        <td>Văn Sử Địa</td>
+                                        <td>
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
+                                            </div>
+                                        </td>
+                                    </tr>
+
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row  mt-1 g-1 align-items-center justify-content-center">
+                    <hr class="mt-1 mb-1" />
+                    <div class="col-md-2 col-3">
+                        @*<input type="submit" value="Create" class="btn btn-default" />*@
+                        <input class="btn btn-outline-success" type="submit" value="Đồng ý" style="width:100%" />
+                    </div>
+                    <div class="col-md-2 col-3">
+                        @Html.ActionLink("Hủy bỏ", "Index", null, new { @class = "btn btn-outline-danger", @style = "width:100%; white-space:nowrap" })
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
