--- a/Areas/Admin/Views/Xas/Index.cshtml
+++ b/Areas/Admin/Views/Xas/Index.cshtml
@@ -5,95 +5,82 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
-
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
         <div class="page-header-content">
             <div class="row align-items-center justify-content-between pt-3">
                 <div class="col-auto mb-1">
-                    <h1 class="page-header-title mb-2">
+                    <div class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        Phường xã
-                    </h1>
-                </div>
-                <div class="col-12 col-xl-auto mb-3">
-                    <a class="btn btn-sm btn-light text-primary" href="@Url.Action("Create","Xas")">
-                        <i class="me-1" data-feather="user-plus"></i>
-                        Thêm mới
-                    </a>
+                        <span>Quản lý thông tin Phường/ Xã</span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </header>
 
-
-<div class="container-fluid px-4">
-    <div class="card">
-        <div class="card-body">
-            @*<div class="col-md-6 text-md-end small">
-                    <div class="mt-4 mb-2" style="display: inline-block;">
-                        @using (Html.BeginForm("Index", "Xas", FormMethod.Post, new { enctype = "multipart/form-data" }))
+<div class="container-fluid px-12">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card card-header-actions mt-1 mb-1 ">
+                <div class="card-header">
+                    <span>Danh sách các Phường/ Xã</span>
+                    @*<select class="form-select form-select-sm" style="min-width:150px!important; max-width:250px">
+                        <option>Phường Đông Vệ</option>
+                        <option>Phường Quảng Thắng</option>
+                    </select>*@
+                    <a class="btn btn-outline-primary btn-sm align-items-center" href="@Url.Action("Create", "Xas")"> + Thêm mới</a>
+                </div>
+                <div class="card-body">
+                    <table class="table table-striped table-hover m-0 mb-2">
+                        <thead>
+                            <tr>
+                                <th>@Html.DisplayName("Tên huyện") </th>
+                                <th>@Html.DisplayName("Tên xã") </th>
+                                <th>@Html.DisplayName("Mã xã") </th>
+                                <th>@Html.DisplayName("Ghi chú")</th>
+                                <th style="width:90px; text-align:center">@Html.DisplayName("Cập nhật")</th>
+                            </tr>
+                        </thead>
+                        @foreach (var item in Model)
                         {
-                            <input class="btn btn-secondary" type="submit" value="Lưu" />
-                            <input id="chooseFileButton" class="btn btn-success" value="Nhập excel" />
-                            <input id="fileInput" name="filePhuongXa" type="file" accept=".xlsx, .xls" style="display: none;" />
+                            <tr>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Huyen.Huyen_TenHuyen)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Xa_Ten)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Xa_Ma)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Xa_GhiChu)
+                                </td>
+                                <td style="width:100px; text-align:center">
+                                    @Html.ActionLink("Sửa", "Edit", new { id = item.Xa_ID }) |
+                                    @Html.ActionLink("Xóa", "Delete", new { id = item.Xa_ID })
+                                </td>
+                            </tr>
                         }
-                    </div>
-                </div>*@
-            <table class="table">
-                <tr>
+                    </table>
 
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().Xa_Ma)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().Xa_Ten)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().Huyen.Huyen_TenHuyen)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().Xa_GhiChu)
-                    </th>
-                    <th></th>
-                </tr>
-
-                @foreach (var item in Model)
-                {
-                    <tr>
-
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Xa_Ma)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Xa_Ten)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Huyen.Huyen_TenHuyen)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Xa_GhiChu)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Xa_ID }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Xa_ID }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Xa_ID })
-                        </td>
-                    </tr>
-                }
-
-            </table>
-            <!-- Thêm mã phân trang -->
-            <br />
-            Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
-
-            @Html.PagedListPager(Model, page => Url.Action("Index",
-                new { page }))
-            <!-- Kết thúc -->
+                    <!-- Thêm mã phân trang -->
+                    <span style="display: inline-block;">
+                        Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount/ (Tổng số 11610 bản ghi)
+                      
+                    </span>
+                    
+                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+                    <!-- Kết thúc -->
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
 <script>
     $(document).ready(function () {
         $('#chooseFileButton').click(function () {
