update admin layout

--- a/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
@@ -73,14 +73,18 @@
                         <div class="sidenav-menu-heading">MENU</div>
 
                         <!-- Sidenav Accordion (Dashboard)-->
-                        <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">
+                        <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#menuThiSinh" aria-expanded="false" aria-controls="menuThiSinh">
                             <div class="nav-link-icon"><i data-feather="activity"></i></div>
-                            Thí sinh đăng ký
+                            Thông tin chung
+                            <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
-                        @*<a class="nav-link" href="@Url.Action("Index", "DangKyXetTuyens")">
-                                <div class="nav-link-icon"><i data-feather="grid"></i></div>
-                                Đăng ký xét tuyển
-                            </a>*@
+                        <div class="collapse" id="menuThiSinh" data-bs-parent="#menuThiSinh">
+                            <nav class="sidenav-menu-nested nav accordion" id="accordionSidenavPages">
+                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Thông tin thí sinh</a>
+                                <a class="nav-link" href="@Url.Action("Index", "DangKyXetTuyens")">Đăng ký nguyện vọng</a>
+
+                            </nav>
+                        </div>
                         <a class="nav-link" href="@Url.Action("Index", "ToHopMons")">
                             <div class="nav-link-icon"><i data-feather="filter"></i></div>
                             Tổ hợp môn
