update admin layout

--- a/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
@@ -73,15 +73,24 @@
                         <div class="sidenav-menu-heading">MENU</div>
 
                         <!-- Sidenav Accordion (Dashboard)-->
+
+                        <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">
+                            <div class="nav-link-icon"><i data-feather="filter"></i></div>
+                            Thông tin thí sinh
+                        </a>
                         <a class="nav-link collapsed" href="javascript:void(0);" data-bs-toggle="collapse" data-bs-target="#menuThiSinh" aria-expanded="false" aria-controls="menuThiSinh">
                             <div class="nav-link-icon"><i data-feather="activity"></i></div>
-                            Thông tin chung
+                            Đăng ký xét tuyển
                             <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
                         <div class="collapse" id="menuThiSinh" data-bs-parent="#menuThiSinh">
                             <nav class="sidenav-menu-nested nav accordion" id="accordionSidenavPages">
-                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Thông tin thí sinh</a>
-                                <a class="nav-link" href="@Url.Action("Index", "DangKyXetTuyens")">Đăng ký nguyện vọng</a>
+                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 1</a>
+                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 2</a>
+                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 3</a>
+                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 4</a>
+                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 5</a>
+                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 6</a>
 
                             </nav>
                         </div>
