Auto stash before merge of "dev-minh" and "origin/main"

--- a/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -85,13 +85,8 @@
                         </a>
                         <div class="collapse" id="menuThiSinh" data-bs-parent="#menuThiSinh">
                             <nav class="sidenav-menu-nested nav accordion" id="accordionSidenavPages">
-                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 1</a>
-                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 2</a>
-                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 3</a>
-                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 4</a>
-                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 5</a>
-                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Phương thức 6</a>
-
+                                <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">Thông tin thí sinh</a>
+                                <a class="nav-link" href="@Url.Action("Index", "DangKyXetTuyens")">Đăng ký nguyện vọng</a>
                             </nav>
                         </div>
                         <a class="nav-link" href="@Url.Action("Index", "ToHopMons")">
